# whiteroom

./: .gitignore  .gitmodules  README.md  build-ffmpeg  build-portaudio  build-tools  build-whiteroom  macenv  run  uncrustify  uncrustify.cfg
src/: CMakeLists.txt  audio.h  audio_config.h  audio_config_data.h  audio_output.cpp  audio_output.h  camera.h  controller.h  generator.cpp  generator.h  log.h  main.cpp  main.qml  rtsp.cpp  rtsp.h  shared_amplitudes.h  stateenum.h  white_math.h
tools/: CMakeLists.txt  audio-devices.cpp  rtsp-connect.cpp
